crates/analyzer/tests/snapshots/errors__ctx_builtins_param_incorrect_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: `Barn` expects 1 argument, but 2 were provided
   ┌─ compile_errors/ctx_builtins_param_incorrect_type.fe:13:35
   │
13 │         let existing_barn: Barn = Barn("hello world", address(0))
   │                                   ^^^^ -------------  ---------- supplied 2 arguments
   │                                   │                    
   │                                   expects 1 argument

error: type mismatch
   ┌─ compile_errors/ctx_builtins_param_incorrect_type.fe:13:40
   │
13 │         let existing_barn: Barn = Barn("hello world", address(0))
   │                                        ^^^^^^^^^^^^^ this has type `String<11>`; expected type `address`

error: incorrect type for argument to `Barn.create`
   ┌─ compile_errors/ctx_builtins_param_incorrect_type.fe:14:46
   │
14 │         let created_barn: Barn = Barn.create(address(26), 0)
   │                                              ^^^^^^^^^^^ this has type `address`; expected `Context`

error: missing argument label
   ┌─ compile_errors/ctx_builtins_param_incorrect_type.fe:15:27
   │
15 │         emit WorldMessage(42, message: "hello world")
   │                           ^ add `ctx:` here
   │
   = Note: this label is optional if the argument is a variable named `ctx`.

error: incorrect type for `WorldMessage` argument `ctx`
   ┌─ compile_errors/ctx_builtins_param_incorrect_type.fe:15:27
   │
15 │         emit WorldMessage(42, message: "hello world")
   │                           ^^ this has type `u256`; expected type `Context`


